<resources>
    <string name="app_name">TestApp</string>
    <string name="menu.title_home">Home</string>
    <string name="menu.title_profile">Profile</string>
    <string name="menu.title_chat">Chat</string>
    <string name="menu.title_book">Book</string>
    <string name="menu.title_bedtime">Bedtime</string>
    <string name="home_fragment_news">News</string>
    <string name="item_text">Short news title will be here</string>
    <string name="home_fragment_tasks">Daily Tasks:</string>
    <string name="progress_title">Your overall progress is</string>
    <string name="how_was_your_day">How was your day?</string>
    <string name="how_was_your_day_body">Lorem ipsum dolor sit amet, consectetur adipscing elit. Ut vel odio en urna ultrice…</string>
    <string name="current_transist_title">Current Transist: 3rd House</string>
    <string name="daily_astromeditation">Daily \nastromeditation</string>
    <string name="font_3">3</string>
    <string name="daily_sleep_astromeditation">Daily sleep \nastromeditation</string>
    <string name="font_1">1</string>
    <string name="daily_mantra">Daily mantra</string>
    <string name="font_2">2</string>
    <string name="change_profile">Change profile</string>
    <string name="analyzer">Analyzer</string>
    <string name="profile_name">Angelica Jackson</string>
    <string name="strong_side">Strong side:</string>
    <string name="weak_side">Weak side:</string>
    <string name="analytics">Analytics</string>
    <string name="Perfectionism">perfectionism</string>
    <string name="my_reports">My Reports:</string>
    <string name="astro_psychological_report">Astro- psychological report</string>
    <string name="body_report">Some short description of this type of report.</string>
    <string name="monthly_prediction_report">Monthly prediction report</string>
    <string name="daily_prediction">Daily Prediction</string>
    <string name="love_report">Love report</string>
</resources>