<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_160dp">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/profile_pic"
        android:id="@+id/ivProfileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/profile_pic_icon"
        android:id="@+id/ivProfileIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivProfileImage"
        android:layout_marginStart="96dp" />

    <TextView
        android:text="@string/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        android:textColor="@color/color_595085"
        android:textStyle="bold"
        android:textSize="@dimen/size_16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivProfileIcon"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <TextView
        android:text="@string/analyzer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_595085"
        android:id="@+id/tvPosition"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toEndOf="@+id/ivProfileIcon"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:text="@string/change_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvChangeProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvPosition"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/size_12sp"
        android:textColor="@color/color_595085"
        app:layout_constraintStart_toEndOf="@+id/ivProfileIcon"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>