<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llTasks"
    android:weightSum="3"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_90dp"
        android:layout_marginEnd="@dimen/size_15dp"
        android:background="@drawable/background_blue"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_astromeditation"
            android:textColor="@color/color_61598B"
            android:textSize="@dimen/size_9sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.104"
            android:id="@+id/tvFirstTitle"
            android:layout_marginStart="16dp" />

        <TextView
            android:text="@string/font_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFirstNumber"
            android:textColor="@color/color_403572"
            android:textSize="@dimen/size_24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/size_16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/size_16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstTitle"
            app:layout_constraintVertical_bias="0.961" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivFirstIcon"
            app:srcCompat="@drawable/ic_tasks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvFirstNumber"
            android:layout_marginStart="@dimen/size_2dp"
            app:tint="@color/color_403572"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstTitle"
            app:layout_constraintVertical_bias="0.38" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_90dp"
        android:layout_marginEnd="@dimen/size_15dp"
        android:background="@drawable/background_red"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_sleep_astromeditation"
            android:textColor="@color/color_FF3726"
            android:textSize="@dimen/size_9sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.104"
            android:id="@+id/tvSecTitle"
            android:layout_marginStart="16dp" />

        <TextView
            android:text="@string/font_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSecNumber"
            android:textColor="@color/color_FF5648"
            android:textSize="@dimen/size_24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/size_16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/size_16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSecTitle"
            app:layout_constraintVertical_bias="0.961" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivSecIcon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSecNumber"
            android:layout_marginStart="@dimen/size_2dp"
            app:srcCompat="@drawable/ic_tasks"
            app:layout_constraintTop_toBottomOf="@+id/tvSecTitle"
            app:layout_constraintVertical_bias="0.38"
            app:tint="@color/color_FF5648" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_90dp"
        android:background="@drawable/background_green"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_mantra"
            android:textColor="@color/color_479696"
            android:textSize="@dimen/size_9sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.104"
            android:id="@+id/tvThirdTitle"
            android:layout_marginStart="16dp" />

        <TextView
            android:text="@string/font_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvThirdNumber"
            android:textColor="@color/color_479696"
            android:textSize="@dimen/size_24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/size_16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/size_16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvThirdTitle"
            app:layout_constraintVertical_bias="0.961" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivThirdIcon"
            app:srcCompat="@drawable/ic_tasks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvThirdNumber"
            android:layout_marginStart="@dimen/size_2dp"
            app:layout_constraintTop_toBottomOf="@+id/tvThirdTitle"
            app:layout_constraintVertical_bias="0.508"
            app:tint="@color/color_479696" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

