<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_30dp"
            android:orientation="vertical">

            <include
                android:id="@+id/profileHeaderLayout"
                layout="@layout/profile_header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvStrongSide"
                android:textStyle="bold"
                android:textColor="@color/color_595085"
                android:text="@string/strong_side"
                android:textSize="@dimen/size_14sp"
                android:layout_marginTop="@dimen/size_20dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvStrongSide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvWeakSide"
                android:textStyle="bold"
                android:textColor="@color/color_595085"
                android:text="@string/weak_side"
                android:textSize="@dimen/size_14sp"
                android:layout_marginTop="@dimen/size_20dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvWeakSide"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/size_10dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvMyReports"
                android:text="@string/my_reports"
                android:layout_marginTop="@dimen/size_56dp"
                android:textColor="@color/color_595085"
                android:textSize="@dimen/size_24sp" />

            <include
                android:id="@+id/myReportsLayout"
                layout="@layout/my_reports_layout"
                android:layout_marginTop="@dimen/size_16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>